added Day2 assignments

--- a/Day1/dataTypes.ipynb
+++ b/Day1/dataTypes.ipynb
@@ -292,6 +292,41 @@
     "val num8:BigDecimal = BigDecimal(123_456.789)  // we can exclude adding BigDecimal type in LHS\n",
     "print(\"BigDecimal: \"+num8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boolean: false"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36memptyArray\u001b[39m: \u001b[32mBoolean\u001b[39m = \u001b[32mfalse\u001b[39m"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val emptyArray:Boolean = false\n",
+    "print(\"Boolean: \"+emptyArray)"
+   ]
   }
  ],
  "metadata": {
