--- a/Day1/first.ipynb
+++ b/Day1/first.ipynb
@@ -84,7 +84,8 @@
     "* Select Statements\n",
     "* Arrays & Strings\n",
     "* Single & Multi-dimensional arrays\n",
-    "* Basic collections"
+    "* Basic collections\n",
+    "* Operators"
    ]
   }
  ],
