--- a/Day1/conditionalAndJumpStmt.ipynb
+++ b/Day1/conditionalAndJumpStmt.ipynb
@@ -47,25 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FebruaryYour grade is : Fail or marks not recognized!\n"
+      "FebruaryYour grade is : A\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "\u001b[36mmonth\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"Feb\"\u001b[39m\n",
-       "\u001b[36mmarks\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m17\u001b[39m\n",
-       "\u001b[36mgrade\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"Fail or marks not recognized!\"\u001b[39m"
+       "\u001b[36mmarks\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m87\u001b[39m\n",
+       "\u001b[36mgrade\u001b[39m: \u001b[32mString\u001b[39m = \u001b[32m\"A\"\u001b[39m"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,8 +88,8 @@
     "val grade = marks match{\n",
     "    case score if score > 95 => \"S\"\n",
     "    case score if(score <= 95 && score >85) => \"A\"\n",
-    "    case score if(score <= 85 && score >75) => \"A\"\n",
-    "    case score if(score <= 75 && score >65) => \"A\"\n",
+    "    case score if(score <= 85 && score >75) => \"B\"\n",
+    "    case score if(score <= 75 && score >65) => \"C\"\n",
     "    case score if(score < 75 && score >33) => \"D\"\n",
     "    case _ => \"Fail or marks not recognized!\"\n",
     "} \n",
