added collections and updated few lines

--- a/Day1/first.ipynb
+++ b/Day1/first.ipynb
@@ -82,8 +82,7 @@
     "* Conditional & Jump statement\n",
     "* Iterative statements\n",
     "* Single & Multi-dimensional arrays\n",
-    "* Basic collections\n",
-    "* Operators"
+    "* Basic collections"
    ]
   }
  ],
