--- a/Day2/tasks.ipynb
+++ b/Day2/tasks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,29 +22,20 @@
     {
      "data": {
       "text/plain": [
-       "defined \u001b[32mfunction\u001b[39m \u001b[36mgetSize\u001b[39m\n",
        "\u001b[36marr\u001b[39m: \u001b[32mArray\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mArray\u001b[39m(\u001b[32m11\u001b[39m, \u001b[32m12\u001b[39m, \u001b[32m22\u001b[39m, \u001b[32m25\u001b[39m, \u001b[32m34\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m90\u001b[39m)\n",
        "defined \u001b[32mfunction\u001b[39m \u001b[36mbubbleSort\u001b[39m"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def getSize(arr:Array[Int]):Int = {\n",
-    "    // var size = 0\n",
-    "    // for(el <- arr){\n",
-    "    //     size += 1\n",
-    "    // }\n",
-    "    return arr.length\n",
-    "}\n",
-    "\n",
     "val arr:Array[Int] = Array(64, 34, 25, 12, 22, 11, 90)\n",
     "\n",
     "def bubbleSort(arr:Array[Int]):Unit = {\n",
-    "    val n:Int = getSize(arr)\n",
+    "    val n:Int = arr.length\n",
     "    var i:Int=0\n",
     "    var j:Int =0\n",
     "    for(i <- 0 until n){\n",
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,14 +83,14 @@
        "\u001b[36marr2\u001b[39m: \u001b[32mArray\u001b[39m[\u001b[32mInt\u001b[39m] = \u001b[33mArray\u001b[39m(\u001b[32m11\u001b[39m, \u001b[32m12\u001b[39m, \u001b[32m22\u001b[39m, \u001b[32m25\u001b[39m, \u001b[32m34\u001b[39m, \u001b[32m64\u001b[39m, \u001b[32m90\u001b[39m)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def insertionSort(arr:Array[Int]):Unit = {\n",
-    "    val n:Int = getSize(arr)\n",
+    "    val n:Int = arr.length\n",
     "    \n",
     "    for(i <- 0 until n){\n",
     "        val key = arr(i)\n",
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +139,7 @@
        "\u001b[36mn\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m7\u001b[39m"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +182,7 @@
     "}\n",
     "\n",
     "val arr3:Array[Int] = Array(64, 34, 25, 12, 22, 11, 90)\n",
-    "val n:Int = getSize(arr)\n",
+    "val n:Int = arr3.length\n",
     "quickSort(arr3,0,n-1)\n",
     "for(el <- arr3){\n",
     "    print(s\"$el ->\")\n",
@@ -232,7 +223,7 @@
    ],
    "source": [
     "def heapSort(arr:Array[Int]):Unit = {\n",
-    "    val n = getSize(arr)\n",
+    "    val n = arr.length\n",
     "    // Build heap (rearrange array)\n",
     "    for(i <- ((n/2)-1) until(-1,-1)){\n",
     "        heapify(arr,n,i)\n",
@@ -310,7 +301,7 @@
    ],
    "source": [
     "def selectionSort(arr:Array[Int]):Unit = {\n",
-    "    val n = getSize(arr)\n",
+    "    val n = arr.length\n",
     "    for(i <- 0 until n-1){\n",
     "        // Assume the current position holds\n",
     "        //  the minimum element\n",
