added Day3 class files

--- a/Day2/tasks.ipynb
+++ b/Day2/tasks.ipynb
@@ -324,6 +324,213 @@
     "    print(s\"$el ->\")\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operators\n",
+    "1. Arithmatic\n",
+    "2. Relational\n",
+    "3. Logical\n",
+    "4. Assignment\n",
+    "5. Bitwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36ma\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m25\u001b[39m\n",
+       "\u001b[36mb\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m67\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val a:Int = 25\n",
+    "val b:Int = 67"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addidtion: 25 + 67 = 92\n",
+      "Subtraction: 25 - 67 = -42\n",
+      "Multiplaction: 25 * 67 = 1675\n",
+      "Division: 25 / 67 = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Arithmatic Operators\n",
+    "println(s\"Addidtion: $a + $b = ${a+b}\")\n",
+    "println(s\"Subtraction: $a - $b = ${a-b}\")\n",
+    "println(s\"Multiplaction: $a * $b = ${a*b}\")\n",
+    "println(s\"Division: $a / $b = ${a/b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 == 67 is false\n",
+      "25 != 67 is true\n",
+      "25 > 67 is false\n",
+      "25 < 67 is true\n",
+      "25 <= 67 is true\n",
+      "25 >= 67 is false\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Relational Operators\n",
+    "println(s\"$a == $b is ${a==b}\")\n",
+    "println(s\"$a != $b is ${a!=b}\")\n",
+    "println(s\"$a > $b is ${a>b}\")\n",
+    "println(s\"$a < $b is ${a<b}\")\n",
+    "println(s\"$a <= $b is ${a<=b}\")\n",
+    "println(s\"$a >= $b is ${a>=b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logic AND: a && b = false\n",
+      "Logic OR: a || b = true\n",
+      "Logic NOT: !a = true\n",
+      "Logic XOR: a ^ b = true\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36ma\u001b[39m: \u001b[32mBoolean\u001b[39m = \u001b[32mfalse\u001b[39m\n",
+       "\u001b[36mb\u001b[39m: \u001b[32mBoolean\u001b[39m = \u001b[32mtrue\u001b[39m"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// logical Operators\n",
+    "val a = false \n",
+    "val b = true\n",
+    "\n",
+    "println(s\"Logic AND: a && b = ${a && b}\")\n",
+    "println(s\"Logic OR: a || b = ${a || b}\")\n",
+    "println(s\"Logic NOT: !a = ${!a}\")\n",
+    "println(s\"Logic XOR: a ^ b = ${a ^ b}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "2\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mnum1\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m0\u001b[39m"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// assignment Operators\n",
+    "var num1 = 2\n",
+    "num1 += 1\n",
+    "println(num1)\n",
+    "\n",
+    "num1 -= 1\n",
+    "println(num1)\n",
+    "\n",
+    "num1 *= 1\n",
+    "println(num1)\n",
+    "\n",
+    "num1 %= 2\n",
+    "println(num1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bitwise AND 13 & 7 = 5\n",
+      "Bitwise OR 13 | 7 = 15\n",
+      "Bitwise left shift 13 << 1 = 26\n",
+      "Bitwise right shift 13 >> 3 = 1\n",
+      "Bitwise XOR 13 ^ 7 = 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mnum2\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m13\u001b[39m\n",
+       "\u001b[36mnum3\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m7\u001b[39m"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Bitwise\n",
+    "val num2 = 13\n",
+    "val num3 = 7\n",
+    "\n",
+    "println(s\"Bitwise AND $num2 & $num3 = ${num2 & num3}\")\n",
+    "println(s\"Bitwise OR $num2 | $num3 = ${num2 | num3}\")\n",
+    "println(s\"Bitwise left shift $num2 << 1 = ${num2 << 1}\")\n",
+    "println(s\"Bitwise right shift $num2 >> 3 = ${num2>>3}\")\n",
+    "println(s\"Bitwise XOR $num2 ^ $num3 = ${num2 ^ num3}\")"
+   ]
   }
  ],
  "metadata": {
