added changes in tasks

--- a/Day3/tasks.ipynb
+++ b/Day3/tasks.ipynb
@@ -67,18 +67,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Abstraction: Used for data hiding and it shows what an object does and hides how it does.\n",
-    "* Access specifiers\n"
+    "#### 2. Abstraction: Used for data hiding and it shows what an object does and hides how it does.\n",
+    "##### Access specifiers\n",
+    "* private: fields declared with this are only accessible within the same class it is defined.\n",
+    "* public: fields declared with this can be accessed from anywhere. By default all the variables and methods are public\n",
+    "* protected: fields declared with this can only be accessed from the same class and it's subclasses.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SDE: Trevor, salary: 5267000.67\n",
+      "Manager: Abhishek, salary: 6289791.569\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mEmployee\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mManager\u001b[39m\n",
+       "defined \u001b[32mclass\u001b[39m \u001b[36mSDE\u001b[39m\n",
+       "\u001b[36msde1\u001b[39m: \u001b[32mSDE\u001b[39m = ammonite.$sess.cmd46$Helper$SDE@3ffb11f5\n",
+       "\u001b[36mmanager1\u001b[39m: \u001b[32mManager\u001b[39m = ammonite.$sess.cmd46$Helper$Manager@1b917aa6"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// abstraction\n",
+    "abstract class Employee{\n",
+    "    protected def salary():Double\n",
+    "    def details():String\n",
+    "}\n",
+    "\n",
+    "class Manager(private val name:String, private val salaryAmount:Double) extends Employee{\n",
+    "    def salary():Double = salaryAmount\n",
+    "    def details():String = s\"Manager: $name, salary: $salaryAmount\"\n",
+    "}\n",
+    "\n",
+    "class SDE(private val name:String, private val salaryAmount:Double) extends Employee{\n",
+    "    def salary():Double = salaryAmount\n",
+    "    def details():String = s\"SDE: $name, salary: $salaryAmount\"\n",
+    "}\n",
+    "\n",
+    "val sde1 = new SDE(\"Trevor\",5267000.67)\n",
+    "val manager1 = new Manager(\"Abhishek\",6289791.569)\n",
+    "\n",
+    "println(sde1.details())\n",
+    "println(manager1.details())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Polymorphism: It allows us to have one defination with different implementations.\n",
+    "#### 3. Polymorphism: It allows us to have one defination with different implementations.\n",
     "* Method overloading: When a class have same method name but diffrent method signature.\n",
     "* Method overriding: When a subclass gives method implementation for an already defined method in super class\n",
-    "* Operator overloading: Allows us to re-define the behaviour of operators for user defined data types(eg. class)"
+    "* Operator overloading: Allows us to re-define the behaviour of operators for user defined data types(eg. class)\n",
+    "* Constructor overloading: class having different constructors with different parameter list."
    ]
   },
   {
@@ -122,10 +178,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Naruto and I am 16 years old.\n",
+      "My name is Madara and I am 101 years old.\n",
+      "My name is Otsuki and I am 1000 years old.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mPerson\u001b[39m\n",
+       "\u001b[36mp1\u001b[39m: \u001b[32mPerson\u001b[39m = My name is Naruto and I am 16 years old.\n",
+       "\u001b[36mp2\u001b[39m: \u001b[32mPerson\u001b[39m = My name is Madara and I am 101 years old.\n",
+       "\u001b[36mp3\u001b[39m: \u001b[32mPerson\u001b[39m = My name is Otsuki and I am 1000 years old."
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// constructor overloading\n",
+    "class Person(\n",
+    "    val name:String,\n",
+    "    val age:Int\n",
+    "){\n",
+    "    // auxillary constructor\n",
+    "    def this(name:String)={\n",
+    "        this(name,101)\n",
+    "    }\n",
+    "\n",
+    "    def this() = {\n",
+    "        this(\"Otsuki\",1000)\n",
+    "    }\n",
+    "\n",
+    "    override def toString() = s\"My name is $name and I am $age years old.\"\n",
+    "}\n",
+    "\n",
+    "val p1 = new Person(\"Naruto\",16)\n",
+    "val p2 = new Person(\"Madara\")\n",
+    "val p3 = new Person()\n",
+    "println(p1)\n",
+    "println(p2)\n",
+    "println(p3)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Inheritance: Allows a class to inherit the methods of an existing class\n",
+    "#### 4. Inheritance: Allows a class to inherit the methods of an existing class\n",
     "* Abstract class: way to achieve inheritance. This class cannot be instantiated by itself and serves as a blue print for other class and allows them to inherit its methods and\n",
     "properties and also give them option to implement the abstract methods defined in it.\n"
    ]
@@ -221,12 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### companion object"
+    "#### 5. companion object"
    ]
   }
  ],
