added missing companion objects

--- a/Day3/tasks.ipynb
+++ b/Day3/tasks.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "\u001b[36mp3\u001b[39m: \u001b[32mPoint\u001b[39m = x: 4, y: 7"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,6 +332,58 @@
    "metadata": {},
    "source": [
     "#### 5. companion object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ninja Name: Naruto, Rank: Genin\n",
+      "Ninja Name: Neji, Rank: Jonin\n",
+      "Welcome to the Konoha Academy!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mclass\u001b[39m \u001b[36mNinja\u001b[39m\n",
+       "defined \u001b[32mobject\u001b[39m \u001b[36mNinja\u001b[39m\n",
+       "\u001b[36mnaruto\u001b[39m: \u001b[32mNinja\u001b[39m = ammonite.$sess.cmd56$Helper$Ninja@7223580d\n",
+       "\u001b[36msasuke\u001b[39m: \u001b[32mNinja\u001b[39m = ammonite.$sess.cmd56$Helper$Ninja@30e92140"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Ninja(val name: String, val rank: String) {\n",
+    "  def details(): String = s\"Ninja Name: $name, Rank: $rank\"\n",
+    "}\n",
+    "\n",
+    "// Companion object\n",
+    "object Ninja {\n",
+    "  // Factory method to create a Ninja with default rank\n",
+    "  def apply(name: String): Ninja = new Ninja(name, \"Genin\")\n",
+    "\n",
+    "  // Method to create a Ninja with a specified rank\n",
+    "  def withRank(name: String, rank: String): Ninja = new Ninja(name, rank)\n",
+    "\n",
+    "  def greet(): String = \"Welcome to the Konoha Academy!\"\n",
+    "}\n",
+    "\n",
+    "val naruto = Ninja(\"Naruto\")             \n",
+    "val sasuke = Ninja.withRank(\"Neji\", \"Jonin\") \n",
+    "\n",
+    "println(naruto.details())\n",
+    "println(sasuke.details())                   \n",
+    "println(Ninja.greet())                   \n"
    ]
   }
  ],
